<resources>
    <string name="app_name">Aplicacion Recetas</string>
    <string name="hint_titulo">Título</string>
    <string name="hint_categoria">Categoría</string>
    <string-array name="categorias">
        <item>Plato principal</item>
        <item>Segundo plato</item>
        <item>Cena</item>
        <item>Ensalada</item>
        <item>Postre</item>
    </string-array>
    <string name="hint_tiempo">Tiempo (min)</string>
    <string name="hint_ingredientes">Ingredientes</string>
    <string name="hint_pasos">Pasos</string>
    <string name="btn_guardar">Guardar</string>
    <string name="error_titulo">Introduce un título para la receta</string>
    <string name="error_tiempo">Introduce el tiempo</string>
    <string name="error_ingredientes">Introduce los ingredientes</string>
    <string name="error_pasos">Introduce los pasos</string>
    <string name="categoria">Categoría</string>
    <string name="tiempo">Tiempo</string>
    <string name="minutos">min</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="btn_agregar_receta">Agregar receta</string>
    <string name="idioma_castellano">Castellano</string>
    <string name="idioma_euskera">Euskera</string>
    <string name="confirmar_eliminacion">Confirmar eliminación</string>
    <string name="mensaje_confirmar_eliminacion">¿Seguro que quieres eliminar la receta?</string>
    <string name="receta_eliminada">Receta eliminada</string>
    <string name="noti_receta_eliminada_titulo">Receta eliminada</string>
    <string name="noti_receta_eliminada_texto">Se ha eliminado: %1$s</string>
    <string name="noti_receta_agregada_titulo">Receta añadida</string>
    <string name="noti_receta_agregada_texto">Se ha añadido: %1$s</string>
    <string name="no_notificaciones">No se podrán enviar notificaciones de nuevas recetas</string>
    <string name="salir_titulo">Salir</string>
    <string name="salir_mensaje">¿Seguro que quiere salir de la aplicación?</string>
    <string name="navigation_drawer_open">Abrir menú lateral</string>
    <string name="navigation_drawer_close">Cerrar menú lateral</string>
    <string name="btn_agregar_foto">Agregar foto</string>
    <string name="foto_receta">Foto de la receta</string>
    <string name="favorito">favorito</string>
    <string name="ver_favoritas">Ver favoritas</string>
    <string name="ver_todas">Ver todas las recetas</string>
    <string name="volver_inicio">Volver al inicio</string>
    <string name="bienvenido">Bienvenido/a</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="email_password">Email y contraseña obligatorios</string>
    <string name="nombre_email_password">Todos los campos son obligatorios</string>
    <string name="email_invalido">Email inválido</string>
    <string name="btn_registrar">Registrar</string>
    <string name="registrado">Usuario registrado correctamente</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="supermercados">Ver supermercados</string>
    <string name="ubicacion">Tu ubicación</string>
    <string name="supermercados_cerca">Supermercados</string>
    <string name="maps_api_key">AIzaSyCd1ECDiUeBTkZlxIgCozFuOS2-x6Y1RwI</string>
    <string name="receta_nueva">Nueva receta</string>
    <string name="detalle_receta">Detalle receta</string>
    <string name="cambios">Cambios guardados</string>
    <string name="btn_cambiar_foto">Cambiar foto</string>
    <string name="galeria">Galería</string>
    <string name="camara">Cámara</string>
    <string name="seleccionar_opcion">Selecciona una opción</string>
    <string name="anterior">Anterior</string>
    <string name="siguiente">Siguiente</string>
    <string name="modo_cocina">Modo cocina</string>
    <string name="modo_cocina_activa">Modo cocina activa</string>
    <string name="cocinando">Cocinando...</string>
    <string name="salir_cocina">Salir modo cocina</string>
    <string name="paso_actual">Paso actual</string>
    <string name="paso_formato">Paso %1$d de %2$d</string>

</resources>