<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/light_purple"
        android:title="@string/receta_nueva"
        android:titleTextColor="@color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:clipToPadding="false">

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextTitulo"
                android:hint="@string/hint_titulo"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp" />

            <TextView
                android:text="@string/hint_categoria"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/spinnerCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp" />

            <TextView
                android:text="@string/hint_tiempo"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editTextTiempo"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp" />

            <TextView
                android:text="@string/hint_ingredientes"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editTextIngredientes"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp" />

            <TextView
                android:text="@string/hint_pasos"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editTextPasos"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp" />

            <ImageView
                android:id="@+id/imageViewFoto"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginBottom="12dp"/>

            <Button
                android:id="@+id/btnAgregarFoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/dark_purple"
                android:text="@string/btn_agregar_foto"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnGuardar"
                android:text="@string/btn_guardar"
                android:textColor="@color/white"
                android:backgroundTint="@color/dark_purple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>