<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_detalle_receta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/textViewTitulo"
        android:text="@string/hint_titulo"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:background="@color/light_purple"
        android:padding="12dp"
        android:elevation="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewCategoria"
        android:text="@string/hint_categoria"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:background="@color/light_purple"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewTiempo"
        android:text="@string/hint_tiempo"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:background="@color/light_purple"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/textViewCategoria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewIngredientes"
        android:text="@string/hint_ingredientes"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:background="@color/light_purple"
        android:padding="12dp"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTiempo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewPasos"
        android:text="@string/hint_pasos"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:background="@color/light_purple"
        android:padding="12dp"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/textViewIngredientes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>