<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnIdiomaEs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idioma_castellano"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnIdiomaEu"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnIdiomaEu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idioma_euskera"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"/>

    <fragment
        android:id="@+id/fragment_lista_recetas"
        android:name="com.example.aplicacion_recetas.ListaRecetasFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnIdiomaEs"
        app:layout_constraintBottom_toTopOf="@id/btnAgregarReceta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnAgregarReceta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_agregar_receta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>